--- a/app/globals.css
+++ b/app/globals.css
@@ -80,3 +80,14 @@
     scrollbar-width: none;
   }
 }
+
+
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
